; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_refresh_by_heap_swap.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_matview.c_refresh_by_heap_swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RecentXmin = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8)* @refresh_by_heap_swap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @refresh_by_heap_swap(i32 %0, i32 %1, i8 signext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8 %2, i8* %6, align 1
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @RecentXmin, align 4
  %10 = call i32 (...) @ReadNextMultiXactId()
  %11 = load i8, i8* %6, align 1
  %12 = call i32 @finish_heap_swap(i32 %7, i32 %8, i32 0, i32 0, i32 1, i32 1, i32 %9, i32 %10, i8 signext %11)
  ret void
}

declare dso_local i32 @finish_heap_swap(i32, i32, i32, i32, i32, i32, i32, i32, i8 signext) #1

declare dso_local i32 @ReadNextMultiXactId(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
